# OpenGL

./: .gitmodules  CMakeLists.txt  gc_3d_defs.hpp  main.cpp
Header/: Buffer.hpp  DebugConsole.h  ModelLoader.hpp  Shape.hpp  camera.hpp  gc_3d_defs.hpp  shader.hpp
Shader/: loadShader.cpp
src/: Buffer.cpp  DebugConsole.cpp  Geometry.cpp  ModelLoader.cpp  Shape.cpp  TemporyMain  camera.cpp  main.cpp
